填充中文内容

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -6,14 +6,14 @@
 				<div class="row align-items-center">
 					<div class="col-auto">
 						<ul class="list-inline list-inline-dots mb-0">
-							<li class="list-inline-item"><a href="/docs/index.html">Documentation</a></li>
-							<li class="list-inline-item"><a href="/faq.html">FAQ</a></li>
+							<li class="list-inline-item"><a href="/docs/index.html">文档</a></li>
+							<li class="list-inline-item"><a href="/faq.html">常见问题</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 			<div class="col-12 col-lg-auto mt-3 mt-lg-0 text-center">
-				Copyright © site.time | date: '%Y' <a href="/">site.title</a>. Theme by <a href="/" target="_blank">site.author.name</a> All rights reserved.
+				版权 © {{ .site.time }} <a href="/">{{ .site.title }}</a>. 主题设计 <a href="/" target="_blank">{{ .site.author.name }}</a>。 所有版权已保留。
 			</div>
 		</div>
 	</div>
