--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -36,7 +36,7 @@
 							</div>
 						</a>
 						<div class="dropdown-divider"></div>
-						<a href="#" class="dropdown-item text-center">Mark all as read</a>
+						<a href="#" class="dropdown-item text-center">全部标记为已读</a>
 					</div>
 					<!-- events.end -->
 				</div>
@@ -50,24 +50,21 @@
 					</a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
 						<a class="dropdown-item" href="#">
-							<i class="dropdown-icon fe fe-user"></i> Profile
+							<i class="dropdown-icon fe fe-user"></i> 简介
 						</a>
 						<a class="dropdown-item" href="#">
-							<i class="dropdown-icon fe fe-settings"></i> Settings
+							<i class="dropdown-icon fe fe-settings"></i> 设置
 						</a>
 						<a class="dropdown-item" href="#">
 							<span class="float-right"><span class="badge badge-primary">6</span></span>
-							<i class="dropdown-icon fe fe-mail"></i> Inbox
-						</a>
-						<a class="dropdown-item" href="#">
-							<i class="dropdown-icon fe fe-send"></i> Message
+							<i class="dropdown-icon fe fe-send"></i> 消息
 						</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="#">
-							<i class="dropdown-icon fe fe-help-circle"></i> Need help?
+							<i class="dropdown-icon fe fe-help-circle"></i> 帮助
 						</a>
 						<a class="dropdown-item" href="#">
-							<i class="dropdown-icon fe fe-log-out"></i> Sign out
+							<i class="dropdown-icon fe fe-log-out"></i> 退出
 						</a>
 					</div>
 				</div>
